Update title and add DAIC introduction

--- a/content/en/_index.html
+++ b/content/en/_index.html
@@ -10,25 +10,40 @@ toc_root = true
   path = "/**/*"
 +++
 
-<!--
-{{< blocks/cover title="Welcome to Goldydocs: A Docsy Example Project!" image_anchor="top" height="full" color="orange" >}}
+
+{{< blocks/cover title="Welcome to DAIC: The Delft AI Cluster" height="min">}}
 <div class="mx-auto">
+	
+	<a class="btn btn-lg btn-secondary mr-3 mb-4" href="{{< relref "/quickstart" >}}">
+		Get Started <i class="fas fa-arrow-alt-circle-right ml-2"></i>
+	</a>
 	<a class="btn btn-lg btn-primary mr-3 mb-4" href="{{< relref "/docs" >}}">
-		Learn More <i class="fas fa-arrow-alt-circle-right ml-2"></i>
+		Learn more <i class="fas fa-arrow-alt-circle-right ml-2"></i>
 	</a>
-	<a class="btn btn-lg btn-secondary mr-3 mb-4" href="https://github.com/google/docsy-example">
-		Download <i class="fab fa-github ml-2 "></i>
-	</a>
-	<p class="lead mt-5">Porridge temperature assessment - in the cloud!</p>
+	
+	<p class="lead mt-5"> 
+		DAIC (formerly known as INSY-HPC or just plainly HPC) is a TU Delft High Performance Computing (HPC) cluster consisting of Linux compute servers 
+		with a lot of processing power and memory for running large, long or GPU-enabled jobs. 
+
+		DAIC was initiated within the INSY department in 2015, and later, resources were joined with ST (both from EWI), and with other departments across
+		 TU Delft faculties (TNW, TPM, 3mE and CiTG). 
+
+		The cluster is available (only) to users from the participating departments, and access can be arranged through the department's contact persons. 
+
+	</p>
 	{{< blocks/link-down color="info" >}}
 </div>
 {{< /blocks/cover >}}
--->
+
 
 {{% blocks/lead color="primary" %}}
-*Cluster News*
+[*Campus-wide disruptions and maintenance*](https://meldingen-ict.tudelft.nl/en/)
 
-************ Add feed about ICT disruptions **********
+<!--
+	************ Add feed about ICT disruptions **********
+-->
+
+
 
 {{% /blocks/lead %}}
 
@@ -49,14 +64,6 @@ Depending on the case, reach out to us- in person office hours xxxxxxxxx, via em
 
 {{< /blocks/section >}}
 
-<!--
-{{< blocks/section >}}
-<div class="col">
-<h1 class="text-center">This is the second Section</h1>
-</div>
-
-{{< /blocks/section >}}
--->
 
 <!--
 {{< blocks/section >}}
@@ -64,20 +71,17 @@ Depending on the case, reach out to us- in person office hours xxxxxxxxx, via em
 Get the Goldydocs app!
 {{% /blocks/feature %}}
 
-
 {{% blocks/feature icon="fa-sharp fa-solid fa-circle-question" title="Contributions welcome!" url="https://github.com/google/docsy-example" %}}
 We do a [Pull Request](https://github.com/google/docsy-example/pulls) contributions workflow on **GitHub**. New users are always welcome!
 {{% /blocks/feature %}}
 
-
 {{% blocks/feature icon="fab fa-twitter" title="Follow us on Twitter!" url="https://twitter.com/GoHugoIO" %}}
 For announcement of latest features etc.
 {{% /blocks/feature %}}
-
-
 {{< /blocks/section >}}
-
 -->
+
+
 
 <!--
 {{< blocks/section >}}
