fix ict issues link in home page

--- a/content/en/_index.html
+++ b/content/en/_index.html
@@ -38,13 +38,8 @@ toc_root = true
 
 
 {{% blocks/lead color="primary" %}}
-[Campus-wide disruptions and maintenance](https://meldingen-ict.tudelft.nl/en/)
 
-<!--
-	************ Add feed about ICT disruptions **********
--->
-
-
+<a href="https://meldingen-ict.tudelft.nl/en/">Campus-wide disruptions and maintenance</a>
 
 {{% /blocks/lead %}}
 
