align middle parts of home page

--- a/content/en/_index.html
+++ b/content/en/_index.html
@@ -11,7 +11,7 @@ toc_root = true
 +++
 
 
-{{< blocks/cover title="Welcome to DAIC: The Delft AI Cluster" height="min">}}
+{{< blocks/cover title="Welcome to DAIC: The Delft AI Cluster" height="min" >}}
 <div class="mx-auto">
 	
 	<a class="btn btn-lg btn-secondary mr-3 mb-4" href="{{< relref "/quickstart" >}}">
@@ -43,7 +43,8 @@ toc_root = true
 
 {{% /blocks/lead %}}
 
-{{< blocks/section color="dark" >}}
+{{% blocks/section color="dark" type="row" %}}
+
 {{% blocks/feature icon="fa-lightbulb" title="Frequently Asked Questions" url="support/faqs" %}}
 
 For handy tips and current known issues, head over to the [Support area](support)
@@ -58,7 +59,7 @@ We do a [Merge Request](https://gitlab.ewi.tudelft.nl/aeaahmed/DAICdocumentation
 For specific questions, you can consult with us and other cluster users on [MatterMost](https://mattermost.tudelft.nl/login) ~~or [MS Teams](https://teams.microsoft.com/l/channel/19%3ad5501f1d3a6e4b7394d7cee89d5b2d1c%40thread.tacv2/General?groupId=f73478dd-163d-4e49-8f75-cdfe56e20bbc&tenantId=096e524d-6929-4030-8cd3-8ab42de0887b), or even submit a ticket in the [TU Delft Self-Service Portal](https://tudelft.topdesk.net/)~~
 {{% /blocks/feature %}}
 
-{{< /blocks/section >}}
+{{% /blocks/section %}}
 
 
 <!--
