--- a/content/en/_index.html
+++ b/content/en/_index.html
@@ -55,8 +55,8 @@ For handy tips and current known issues, head over to the [Support area](support
 We do a [Merge Request](https://gitlab.ewi.tudelft.nl/aeaahmed/DAICdocumentation/merge_requests) contributions workflow on **GitLab**. Feedback is always welcome!
 {{% /blocks/feature %}}
 
-{{% blocks/feature icon="fa-sharp fa-solid fa-circle-question" title="Community support" url="https://mattermost.tudelft.nl/login" %}}
-For specific questions, you can consult with us and other cluster users on [MatterMost](https://mattermost.tudelft.nl/login) ~~or [MS Teams](https://teams.microsoft.com/l/channel/19%3ad5501f1d3a6e4b7394d7cee89d5b2d1c%40thread.tacv2/General?groupId=f73478dd-163d-4e49-8f75-cdfe56e20bbc&tenantId=096e524d-6929-4030-8cd3-8ab42de0887b), or even submit a ticket in the [TU Delft Self-Service Portal](https://tudelft.topdesk.net/)~~
+{{% blocks/feature icon="fa-sharp fa-solid fa-circle-question" title="Community support" url="https://mattermost.tudelft.nl/signup_user_complete/?id=cb1k3t6ytpfjbf7r397395axyc&md=link&sbr=su" %}}
+For specific questions, you can consult with us and other cluster users on [MatterMost](https://mattermost.tudelft.nl/signup_user_complete/?id=cb1k3t6ytpfjbf7r397395axyc&md=link&sbr=su), or even submit a ticket in the [TU Delft Self-Service Portal](https://tudelft.topdesk.net/tas/public/ssp/)
 {{% /blocks/feature %}}
 
 {{% /blocks/section %}}
