redirect gitlab repo to correct address

--- a/content/en/_index.html
+++ b/content/en/_index.html
@@ -51,8 +51,8 @@ For handy tips and current known issues, head over to the [Support area](support
 {{% /blocks/feature %}}
 
 
-{{% blocks/feature icon="fab fa-gitlab" title="Contributions welcome!" url="https://gitlab.ewi.tudelft.nl/aeaahmed/DAICdocumentation" %}}
-We do a [Merge Request](https://gitlab.ewi.tudelft.nl/aeaahmed/DAICdocumentation/merge_requests) contributions workflow on **GitLab**. Feedback is always welcome!
+{{% blocks/feature icon="fab fa-gitlab" title="Contributions welcome!" url="https://gitlab.ewi.tudelft.nl/daic/docs" %}}
+We do a [Merge Request](https://gitlab.ewi.tudelft.nl/daic/docs/-/merge_requests) contributions workflow on **GitLab**. Feedback is always welcome!
 {{% /blocks/feature %}}
 
 {{% blocks/feature icon="fa-sharp fa-solid fa-circle-question" title="Community support" url="https://mattermost.tudelft.nl/signup_user_complete/?id=cb1k3t6ytpfjbf7r397395axyc&md=link&sbr=su" %}}
