--- a/content/en/_index.html
+++ b/content/en/_index.html
@@ -85,7 +85,7 @@ toc_root = true
 <!---------------------- FAQs, contributions, and support ------------------------------------>
 {{% blocks/section color="dark" type="row" %}}
 
-{{% blocks/feature icon="fa-lightbulb" title="Frequently Asked Questions" url="support/faqs" %}}
+{{% blocks/feature icon="fa-lightbulb" title="Frequently Asked Questions" url="/docs/support/faqs" %}}
 For handy tips and current known issues, head over to the [Support area](support)
 {{% /blocks/feature %}}
 
@@ -98,9 +98,6 @@ For specific questions, you can consult with us and other cluster users on [Matt
 {{% /blocks/feature %}}
 
 {{% /blocks/section %}}
-
-
-
 
 <!--
 {{< blocks/section >}}
