add links to training offers

--- a/content/en/_index.html
+++ b/content/en/_index.html
@@ -17,10 +17,13 @@ toc_root = true
 <div class="mx-auto">
 	
 	<a class="btn btn-lg btn-secondary mr-3 mb-4" href="{{< relref "/quickstart" >}}">
-		Get Started <i class="fas fa-arrow-alt-circle-right ml-2"></i>
+		Quick start <i class="fas fa-arrow-alt-circle-right ml-2"></i>
 	</a>
 	<a class="btn btn-lg btn-primary mr-3 mb-4" href="{{< relref "/docs" >}}">
 		Learn more <i class="fas fa-arrow-alt-circle-right ml-2"></i>
+	</a>
+	<a class="btn btn-lg btn-secondary mr-3 mb-4" href="{{< relref "/support/training" >}}">
+		Training <i class="fas fa-arrow-alt-circle-right ml-2"></i>
 	</a>
 	
 	<p class="lead mt-5"> 
