changed text color

--- a/content/en/_index.html
+++ b/content/en/_index.html
@@ -37,7 +37,6 @@ toc_root = true
 		The cluster is available (only) to users from the participating departments, and access can be arranged through the department's contact persons. 
 	</strong>
 	</p>
-	{{< blocks/link-down color="info" >}} <i>Funding & grants</i>
 </div>
 {{< /blocks/cover >}}
 
@@ -80,7 +79,7 @@ toc_root = true
 <!----------------------------------- Maintenance section ----------------------------------------->
 
 {{% blocks/lead color="primary" %}}
-	<a href="https://meldingen-ict.tudelft.nl/en/">Campus-wide disruptions and maintenance</a>
+	<a href="https://meldingen-ict.tudelft.nl/en/" class="text-white">Campus-wide disruptions and maintenance alerts.</a>
 {{% /blocks/lead %}}
 
 
