--- a/content/en/_index.html
+++ b/content/en/_index.html
@@ -13,9 +13,8 @@ toc_root = true
 
 <!----------------------------------------- Cover section ------------------------------->
 
-{{< blocks/cover title="Welcome to DAIC: The Delft AI Cluster" height="min" >}}
-<div class="mx-auto">
-	
+{{< blocks/cover title="Welcome to DAIC: The Delft AI Cluster" height="min">}}
+<div>
 	<a class="btn btn-lg btn-secondary mr-3 mb-4" href="{{< relref "/quickstart" >}}">
 		Quickstart <i class="fas fa-arrow-alt-circle-right ml-2"></i>
 	</a>
@@ -25,7 +24,6 @@ toc_root = true
 	<a class="btn btn-lg btn-secondary mr-3 mb-4" href="{{< relref "/support/training" >}}">
 		Training <i class="fas fa-arrow-alt-circle-right ml-2"></i>
 	</a>
-	
 	<p class="lead mt-5"> 
 	<strong>
 		DAIC (formerly known as INSY-HPC or just plainly HPC) is a TU Delft High Performance Computing (HPC) cluster consisting of Linux compute servers 
@@ -79,7 +77,8 @@ toc_root = true
 <!----------------------------------- Maintenance section ----------------------------------------->
 
 {{% blocks/lead color="primary" %}}
-	<a href="https://meldingen-ict.tudelft.nl/en/" class="text-white">Campus-wide disruptions and maintenance alerts.</a>
+	<h1 class="text-white">Maintenance</h1>
+	<a href="https://meldingen-ict.tudelft.nl/en/" class="text-white btn btn-lg btn-secondary mr-3 mb-4">Campus-wide disruptions and maintenance alerts</a>
 {{% /blocks/lead %}}
 
 
