--- a/content/en/_index.html
+++ b/content/en/_index.html
@@ -24,6 +24,9 @@ toc_root = true
 	<a class="btn btn-lg btn-secondary mr-3 mb-4" href="{{< relref "/support/training" >}}">
 		Training <i class="fas fa-arrow-alt-circle-right ml-2"></i>
 	</a>
+	<a class="btn btn-lg btn-primary mr-3 mb-4" href="https://mattermost.tudelft.nl/signup_user_complete/?id=cb1k3t6ytpfjbf7r397395axyc&md=link&sbr=su">
+		Community <i class="fas fa-arrow-alt-circle-right ml-2"></i>
+	</a>
 	<p class="lead mt-5"> 
 	<strong>
 		DAIC (formerly known as INSY-HPC or just plainly HPC) is a TU Delft High Performance Computing (HPC) cluster consisting of Linux compute servers 
