add info for contributing to DAIC

--- a/content/en/_index.html
+++ b/content/en/_index.html
@@ -15,17 +15,20 @@ toc_root = true
 
 {{< blocks/cover title="Welcome to DAIC: The Delft AI Cluster" height="min">}}
 <div>
-	<a class="btn btn-lg btn-secondary mr-3 mb-4" href="{{< relref "/quickstart/" >}}">
+	<!-- <a class="btn btn-lg btn-secondary mr-3 mb-4" href="{{< relref "/quickstart/" >}}">
 		Quickstart <i class="fas fa-arrow-alt-circle-right ml-2"></i>
-	</a>
-	<a class="btn btn-lg btn-primary mr-3 mb-4" href="{{< relref "/docs" >}}">
+	</a> -->
+	<!-- <a class="btn btn-lg btn-primary mr-3 mb-4" href="{{< relref "/docs" >}}">
 		Learn more <i class="fas fa-arrow-alt-circle-right ml-2"></i>
-	</a>
+	</a> -->
 	<a class="btn btn-lg btn-secondary mr-3 mb-4" href="{{< relref "/support/training" >}}">
 		Training <i class="fas fa-arrow-alt-circle-right ml-2"></i>
 	</a>
 	<a class="btn btn-lg btn-primary mr-3 mb-4" href="https://mattermost.tudelft.nl/signup_user_complete/?id=cb1k3t6ytpfjbf7r397395axyc&md=link&sbr=su">
 		Community <i class="fas fa-arrow-alt-circle-right ml-2"></i>
+	</a>
+	<a class="btn btn-lg btn-secondary mr-3 mb-4" href="{{< relref "/docs/introduction/contributors-funders/" >}}">
+		Contribute <i class="fas fa-arrow-alt-circle-right ml-2"></i>
 	</a>
 	<p class="lead mt-5"> 
 	<strong>
