--- a/content/en/_index.html
+++ b/content/en/_index.html
@@ -13,7 +13,12 @@ toc_root = true
 
 <!----------------------------------------- Cover section ------------------------------->
 
-{{< blocks/cover title="Welcome to DAIC: The Delft AI Cluster" height="min">}}
+{{< blocks/cover title="" height="min">}}
+<div class="daic-cover-box text-center" >
+    <img src="DAIC_logo.png" alt="DAIC Logo">
+    <p class="lead mt-5">
+    </p>
+</div>
 <div>
 	<!-- <a class="btn btn-lg btn-secondary mr-3 mb-4" href="{{< relref "/quickstart/" >}}">
 		Quickstart <i class="fas fa-arrow-alt-circle-right ml-2"></i>
@@ -30,15 +35,15 @@ toc_root = true
 	<a class="btn btn-lg btn-secondary mr-3 mb-4" href="{{< relref "/docs/introduction/contributors-funders/" >}}">
 		Contribute <i class="fas fa-arrow-alt-circle-right ml-2"></i>
 	</a>
-	<p class="lead mt-5"> 
+	<p class="lead mt-5">
 	<strong>
-		DAIC (formerly known as INSY-HPC or just plainly HPC) is a TU Delft High Performance Computing (HPC) cluster consisting of Linux compute servers 
-		with a lot of processing power and memory for running large, long or GPU-enabled jobs. 
+		DAIC (formerly known as INSY-HPC or just plainly HPC) is a TU Delft High Performance Computing (HPC) cluster consisting of Linux compute servers
+		with a lot of processing power and memory for running large, long or GPU-enabled jobs.
 
 		DAIC was initiated within the INSY department in 2015, and later, resources were joined with ST (both from EWI), and with other departments across
-		 TU Delft faculties (TNW, TPM, 3mE and CiTG). 
+		 TU Delft faculties (TNW, TPM, 3mE and CiTG).
 
-		The cluster is available (only) to users from the participating departments, and access can be arranged through the department's contact persons. 
+		The cluster is available (only) to users from the participating departments, and access can be arranged through the department's contact persons.
 	</strong>
 	</p>
 </div>
