add news section

--- a/content/en/_index.html
+++ b/content/en/_index.html
@@ -35,17 +35,7 @@ toc_root = true
 	<a class="btn btn-lg btn-secondary mr-3 mb-4" href="{{< relref "/docs/about/contributors-funders/" >}}">
 		Contribute <i class="fas fa-arrow-alt-circle-right ml-2"></i>
 	</a>
-	<p class="lead mt-5">
-	<strong>
-		DAIC (formerly known as INSY-HPC or just plainly HPC) is a TU Delft High Performance Computing (HPC) cluster consisting of Linux compute servers
-		with a lot of processing power and memory for running large, long or GPU-enabled jobs.
 
-		DAIC was initiated within the INSY department in 2015, and later, resources were joined with ST (both from EWI), and with other departments across
-		 TU Delft faculties (TNW, TPM, 3mE and CiTG).
-
-		The cluster is available (only) to users from the participating departments, and access can be arranged through the department's contact persons.
-	</strong>
-	</p>
 </div>
 {{< /blocks/cover >}}
 
@@ -88,8 +78,10 @@ toc_root = true
 <!----------------------------------- Maintenance section ----------------------------------------->
 
 {{% blocks/lead color="primary" %}}
-	<h1 class="text-white">Maintenance</h1>
-	<a href="https://meldingen-ict.tudelft.nl/en/" class="text-white btn btn-lg btn-secondary mr-3 mb-4">Campus-wide disruptions and maintenance alerts</a>
+	<h1 class="text-white">News</h1>
+	<a href="/blog/news/" class="text-white btn btn-lg btn-secondary mr-3 mb-4">Cluster-specific news</a>
+
+	<a href="https://meldingen-ict.tudelft.nl/en/" class="text-white btn btn-lg btn-secondary mr-3 mb-4">Campus-wide alerts</a>
 {{% /blocks/lead %}}
 
 
