add maintenance and migration info

--- a/content/en/_index.html
+++ b/content/en/_index.html
@@ -79,10 +79,12 @@ toc_root = true
 
 {{% blocks/lead color="primary" %}}
 	<h1 class="text-white">News</h1>
-{{% alert title="Planned Maintenance (10–17 December 2025)" color="warning" %}}
-**DAIC is expected to be offline** due to datacenter maintenance at TU Delft.  
-Please plan your work around this week and assume your project share may be unavailable.  
-[Read more →](/blog/news/2025-10-31-daic-offline/)
+{{% alert title="Planned Maintenance (11-17 December 2025)" color="warning" %}}
+**DAIC will be offline from 11-17 December** due to datacenter maintenance.  
+No jobs can run and all login nodes will be unavailable.  
+Six GPU nodes will be migrated to the new environment (Q1 2026).
+
+[Read more →](/blog/news/2025-12-04-maintenance-and-migration/)
 {{% /alert %}}
 
 	<a href="/blog/news/" class="text-white btn btn-lg btn-secondary mr-3 mb-4">Cluster-specific news</a>
