update fontawesome icons

--- a/content/en/_index.html
+++ b/content/en/_index.html
@@ -105,7 +105,7 @@ For handy tips and current known issues, head over to the [Support area](support
 We do a [Merge Request](https://gitlab.ewi.tudelft.nl/daic/docs/-/merge_requests) contributions workflow on **GitLab**. Feedback is always welcome!
 {{% /blocks/feature %}}
 
-{{% blocks/feature icon="fa-sharp fa-solid fa-circle-question" title="Community support" url="https://mattermost.tudelft.nl/signup_user_complete/?id=cb1k3t6ytpfjbf7r397395axyc&md=link&sbr=su" %}}
+{{% blocks/feature icon="fa-sharp fa-solid fa fa-comments" title="Community support" url="https://mattermost.tudelft.nl/signup_user_complete/?id=cb1k3t6ytpfjbf7r397395axyc&md=link&sbr=su" %}}
 For specific questions, you can consult with us and other cluster users on [MatterMost](https://mattermost.tudelft.nl/signup_user_complete/?id=cb1k3t6ytpfjbf7r397395axyc&md=link&sbr=su), or even submit a ticket in the [TU Delft Self-Service Portal](https://tudelft.topdesk.net/tas/public/ssp/)
 {{% /blocks/feature %}}
 
