add announcement about upcoming funding round

--- a/content/en/_index.html
+++ b/content/en/_index.html
@@ -79,19 +79,19 @@ toc_root = true
 
 {{% blocks/lead color="primary" %}}
 	<h1 class="text-white">News</h1>
-{{% alert title="Planned Maintenance (11-17 December 2025)" color="warning" %}}
-**DAIC will be offline from 11-17 December** due to datacenter maintenance.  
-No jobs can run and all login nodes will be unavailable.  
-Six GPU nodes will be migrated to the new environment (Q1 2026).
 
-[Read more →](/blog/news/2025-12-04-maintenance-and-migration/)
+{{% alert title="DAIC Spring 2026 Expansion Round Open (Feb–Mar 2026)" color="note" %}}
+**DAIC has opened its Spring 2026 hardware expansion round.**  
+Groups interested in contributing compute resources are invited to contact the REIT team before **mid-March 2026**.
+
+Procurement is expected in May 2026.
+
+[Read more →](/blog/news/2026-02-25-daic-expansion-round/)
 {{% /alert %}}
 
 	<a href="/blog/news/" class="text-white btn btn-lg btn-secondary mr-3 mb-4">Cluster-specific news</a>
-
 	<a href="https://meldingen-ict.tudelft.nl/en/" class="text-white btn btn-lg btn-secondary mr-3 mb-4">Campus-wide alerts</a>
 {{% /blocks/lead %}}
-
 
 
 <!---------------------- FAQs, contributions, and support ------------------------------------>
